kubernetes/tenant/tenant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenant-app
  template:
    metadata:
      labels:
        app: tenant-app
    spec:
      containers:
      - name: tenant-app
        image: reiounagata/aaw-marketplace-bebas-tenant:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.25"
            memory: "384Mi"
          limits:
            cpu: "0.5"
            memory: "774Mi"
