kubernetes/tenant/tenant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenant-service
spec:
  type: LoadBalancer  
  selector:
    app: tenant-app
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 80
      nodePort: 30080
