kubernetes/tenant/tenant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /tenant
        pathType: Prefix
        backend:
          service:
            name: tenant-service
            port:
              number: 8003
